...
                                        <rect key="frame" x="0.0" y="0.0" width="172" height="35.5"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="학원 생성하기">
                                            <fontDescription key="titleFontDescription" type="system" pointSize="18"/>
                                            <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="반 이름을 입력해주세요." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7iB-lo-cAK" customClass="PGTextField" customModule="Pullgo" customModuleProvider="target">
                                <rect key="frame" x="30" y="309.5" width="354" height="45"/>
                                <constraints>
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="반 생성하기"/>
                                <connections>
                                    <action selector="createClassroomClicked:" destination="xDw-bA-Vky" eventType="touchUpInside" id="fhh-Eh-r1P"/>
...
                                <inset key="titleEdgeInsets" minX="20" minY="0.0" maxX="0.0" maxY="0.0"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="학원을 선택해주세요.">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <items>
                                    <navigationItem title="반 관리" id="JZC-tD-SbS">
                                        <leftBarButtonItems>
                                            <barButtonItem id="s0O-Eh-p1l">
...
                                                </connections>
                                            </barButtonItem>
                                            <barButtonItem title="Item" image="line.horizontal.3" catalog="system" style="plain" id="uzv-dP-TAD">
                                                <color key="tintColor" name="AccentColor"/>
                                                <connections>
...
            <objects>
                <navigationController id="0oV-a6-jLR" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="시험 관리" id="v1Y-Xc-vyZ">
                        <imageReference key="image" image="square.and.pencil" catalog="system"/>
                    </tabBarItem>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="시험 생성" id="eLe-ph-WFf">
                        <barButtonItem key="backBarButtonItem" title="시험 생성" id="nWc-aD-3rW"/>
                    </navigationItem>
...
                                </textAttributes>
                                <items>
                                    <navigationItem title="수업 일정" id="WLk-xK-H0U">
                                        <barButtonItem key="leftBarButtonItem" title="Item" style="plain" id="zuN-Lv-fh9">
                                            <imageReference key="image" image="line.horizontal.3" catalog="system"/>
...
