...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="아이디를 입력해주세요" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zN7-ru-N7r" userLabel="username">
                                <rect key="frame" x="30" y="438" width="354" height="50"/>
                                <color key="backgroundColor" name="LightAccent"/>
                                <accessibility key="accessibilityConfiguration" identifier="loginUsername"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="tXb-j5-qat"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <textInputTraits key="textInputTraits" textContentType="username"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="비밀번호를 입력해주세요" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NeA-RT-c4z" userLabel="password">
                                <rect key="frame" x="30" y="503" width="354" height="50"/>
                                <color key="backgroundColor" name="LightAccent"/>
                                <accessibility key="accessibilityConfiguration" identifier="loginPassword"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="bti-5g-ibJ"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                            </textField>
...
                                </constraints>
                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qeY-aB-eUW" customClass="PGButton" customModule="Pullgo" customModuleProvider="target">
                                <rect key="frame" x="30" y="604.5" width="354" height="64"/>
                                <color key="backgroundColor" name="AccentColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="signIn"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="64" id="TsD-UL-yRB"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="로그인"/>
...
                            </button>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="8OQ-B4-QaR">
                                <rect key="frame" x="80" y="384" width="254" height="32"/>
                                <color key="backgroundColor" name="LightAccent"/>
                                <segments>
                                    <segment title="학생"/>
                                    <segment title="선생님"/>
                                </segments>
                                <connections>
                                    <action selector="selectType:" destination="BYZ-38-t0r" eventType="valueChanged" id="zjp-AC-sTe"/>
                                </connections>
                            </segmentedControl>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Mp-IP-Lao">
...
