...
    var cancel: UIAlertAction {
        UIAlertAction(title: "취소", style: .destructive, handler: nil)
    }
    
    func present(title: String, context: String, handler: ((UIAlertAction) -> Void)? = nil) {
        let alert = getAlert(title: title, context: context)
        let action = UIAlertAction(title: "확인", style: .default, handler: handler)
        
        alert.addAction(action)
        self.view?.present(alert, animated: true, completion: nil)
    }
    
    func present(title: String, context: String, actions: [UIAlertAction]) {
...
    func presentNetworkError() {
        self.present(title: "오류", context: .networkError)
    }
    
    private func getAlert(title: String, context: String) -> UIAlertController {
        let alert =  UIAlertController(title: title, message: context, preferredStyle: .alert)
        alert.view.accessibilityIdentifier = "PGAlert"
        return alert
    }

}

class HalfSizePresentationController: UIPresentationController {
...
